# vehron

./: .gitignore  CHANGELOG.md  CITATION.cff  CLA.md  CODEX_website.md  CONTRIBUTING.md  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt
docs/: adding_a_module.md  architecture.md  battery_slot_interface.md  benchmarks.md  codebase_map.md  codebase_map.puml  codebase_markmap.md  getting_started.md  hvac_slot_interface.md  index.md  lfp_model_v2_interface.md  output_contract.md  powertrain_guide.md  public_interface.md  references.md  source_file_standard.md  validation.md  website_handoff.md  yaml_reference.md
docs/examples/: README.md  custom_drive_cycle.csv  custom_drive_cycle_testcase.yaml  external_battery_vehicle.yaml  private_battery_stub.py  private_hvac_stub.py
docs/models/: battery_ecm_2rc.md  cabin_thermal_model.md
paper/: README.md  generate_figures.py  vehron_joss_manuscript.bbl  vehron_joss_manuscript.tex
src/vehron/: __init__.py  constants.py  engine.py  exceptions.py  init_case.py  loader.py  registry.py  resources.py  routes.py  runner.py  state.py
src/vehron/archetypes/: bev_bus_city.yaml  bev_car_sedan.yaml  bev_reference_ioniq6.yaml
src/vehron/interfaces/: __init__.py  lfp_model_v2.py
src/vehron/modules/: __init__.py  base.py
src/vehron/post/: dashboard.py  (+2 more)
tests/: conftest.py
tests/integration/: test_ac_charging.py  test_auto_charge.py  test_bev_car_flat.py  test_init_cli.py  test_reference_benchmarks.py  test_regen_city_cycle.py  test_runner_case_output.py
tests/unit/: test_battery_charging.py  test_battery_ecm.py  test_battery_rint.py  test_battery_slot.py  test_charger_ac.py  test_hvac.py  test_hvac_slot.py  test_init_case.py  test_lfp_interface.py  test_loader.py  test_longitudinal.py  test_motor_analytical.py  test_motor_map.py  test_reducer.py  test_registry.py  test_resources.py  test_runtime_paths.py
(+34 files in other folders)
